syntax = "proto3";

package mirero.daq.domain.common.protos;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Mirero.DAQ.Domain.Common.Protos";

message QueryParameter {
  int32 page_index = 1;
  int32 page_size = 2;
  google.protobuf.StringValue where = 3;
  google.protobuf.StringValue order_by = 4;
}

message PageResult {
  int32 page_index = 1;
  int32 page_size = 2;
  int64 count = 3;
}

message DataInfo{
	int32 chunk_num = 1;
	int64 chunk_size = 2;
	int64 file_size = 3;
	google.protobuf.StringValue filename = 4;
}

message StreamBuffer {
  int64 total_size = 1;
  int64 chunk_size = 2;
  int64 chunk_index = 3;
  bytes buffer = 4;
}

message IdentifiedStreamBuffer {
  int64 id = 1;
  int64 total_size = 2;
  int64 chunk_size = 3;
  int64 chunk_index = 4;
  bytes buffer = 5;
}